connect to redis

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
     "postgresql": "^0.0.1",
-    "querystring": "^0.2.1"
+    "querystring": "^0.2.1",
+    "redis": "^4.5.1"
   },
   "name": "myweb",
   "version": "1.0.0",
